[metadata]
name = xphasesync
version = 0.1.0
author = Sen Zhao
author_email = zhaos@hawaii.edu
description = "Phase synchronization analysis of two time series using Numpy and Xarray."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senclimate/xphasesync
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    xarray
    scipy
include_package_data = true